--- a/Templates/Wiki/Snippits.wikitext
+++ b/Templates/Wiki/Snippits.wikitext
@@ -180,6 +180,22 @@ FF FF 00 00 00 80 68 02 00 00 4C FF 35 FF 30 60
 
 
 
+|-
+|  $1034 # 0000_0001  ||  bit  ||  Character 1  ||  
+|-
+|  $1034 # 0000_0010  ||  bit  ||  Character 1  ||  
+|-
+|  $1034 # 0000_0100  ||  bit  ||  Character 1  ||  
+|-
+|  $1034 # 0000_1000  ||  bit  ||  Character 1  ||  
+|-
+|  $1034 # 0001_0000  ||  bit  ||  Character 1  ||  
+|-
+|  $1034 # 0010_0000  ||  bit  ||  Character 1  ||  
+|-
+|  $1034 # 0100_0000  ||  bit  ||  Character 1  ||  
+|-
+|  $1034 # 1000_0000  ||  bit  ||  Character 1  ||  
 
 
 
